# galene-stream

./: .eslintrc.json  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  galene-stream.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish.yml  python-test.yml
docs/: Vagrantfile.archlinux  Vagrantfile.debian_11  Vagrantfile.ubuntu_20_04  Vagrantfile.ubuntu_20_10  demo.png.license  nginx.conf
docs/standalone_web/: index.html  standalone.js
galene_rtmp/: __init__.py  __main__.py  galene.py  webrtc.py
galene_stream/: __init__.py  __main__.py  cli.py  galene.py  standalone.py  webrtc.py
tests/: __init__.py  test_webrtc.py
