[metadata]
name = galene-stream
long_description = file: README.md
long_description_content_type = text/markdown
description = Gateway to send streams to Galène videoconference server.
maintainer = Alexandre Iooss
maintainer_email = erdnaxe@crans.org
url = https://github.com/erdnaxe/galene-stream
keywords = galene, stream, rtmp, srt, webrtc, gstreamer
license = MIT
license_file = LICENSE.txt
classifiers =
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
packages = find:
include_package_data = True
install_requires =
	websockets
	PyGObject

[bdist_wheel]
; pure python
universal = 1
